@@ -7001,9 +7001,11 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed edge-cases where updating the CACHED application configuration could FAIL (any updates now initiate a 1 second pause AFTER, so any file locks release, in case a second update needs to happen during the same runtime)
 
+-BUG FIX: Fixed throttled APIs (like AlphaVantage FREE tier) not allowing LIGHT CHART REBUILDS (which caused related price charts to not appear in the user interface, AFTER resetting light charts) Sorry!
+
 -BUG FIX: Miscellaneous (minor)
 
--Safety checks for importing config backups (with version states saved to default / cached configs)
+-Safety checks for importing config backups (with version states bound to default / cached configs)
 
 -Minor user experience improvements
 
